# vehicle-core

./: .gitignore  kill.sh  run.sh
src/camera/: CMakeLists.txt  package.xml
src/camera/calibrations/: bottom.yaml  front.yaml
src/camera/cfg/: AvtVimbaCamera.cfg
src/camera/launch/: calibration.launch  mono_camera.launch  mono_camera_simulation.launch  record.launch  stereo_camera.launch  testing_two_camera.launch  two_cameras.launch  two_cameras_robosub.launch  two_cameras_simulation.launch  two_cameras_singapore.launch
src/camera/msg/: CmdCameraConfig.msg  MsgCameraFrame.msg
src/camera/src/: camera.cpp  main.cpp  mono_camera.cpp  simulator_camera.cpp
src/compass/: CMakeLists.txt  compass.launch  compass.yml  compass_surface.yml  package.xml  rosdoc.yaml
src/compass/calibration_data/: MT_data_trancdec.mtb
src/compass/launch/: compass_calibrate_collect.launch  compass_calibrate_store.launch  compass_simulation.launch  compass_surface.launch
src/compass/msg/: CmdConfig.msg  CmdDeclination.msg  MsgAcceleration.msg  MsgAngle.msg  MsgAngleRate.msg  MsgCompassAcceleration.msg  MsgCompassAngleRate.msg  MsgCompassAngleRaw.msg  MsgCompassAngles.msg  MsgCompassMagnetometer.msg  MsgCompassRate.msg  MsgMagnetometer.msg  MsgQuaternion.msg  msgCompassAcceleration.msg  msgCompassAngle.msg
src/compass/src/: com_port.cpp  compass.cpp  driver_compass.cpp  packet_handler.cpp  settings.cpp  usb_port.cpp
src/dvl/: CMakeLists.txt  dvl.yml  package.xml
src/dvl/launch/: dvl.launch  simulation.launch
src/dvl/msg/: MsgDown.msg  MsgDownwardDistance.msg  MsgDownwardVelocity.msg  MsgDvlDistance.msg  MsgDvlDistanceBackward.msg  MsgDvlDistanceForward.msg  MsgDvlDistanceLeftward.msg  MsgDvlDistanceRightward.msg  MsgDvlHeight.msg  MsgDvlVelocity.msg  MsgDvlVelocityDown.msg  MsgDvlVelocityForward.msg  MsgDvlVelocityRight.msg  MsgHeight.msg  MsgPlaneVelocity.msg
src/dvl/src/: DVL_TRDI.cpp  dvl.cpp  main.cpp
src/echometer/: CMakeLists.txt  package.xml
src/echometer/config/: echometer.yml
src/echometer/launch/: echometer.launch
src/echometer/msg/: CmdConfig.msg  CmdWorkStatus.msg  MsgEchometerHeight.msg  MsgEchometerTemperature.msg  MsgHeight.msg  MsgTemperature.msg
src/echometer/src/: com_port.cpp  driver_echometer.cpp  echometer.cpp  main.cpp  nmea_parser.cpp
src/gps/: CMakeLists.txt  gps.yml  package.xml
src/gps/include/: gps.h
src/gps/launch/: gps.launch  gps_simulation.launch  simulation.launch
src/gps/msg/: MsgCorrections.msg  MsgGlobalPosition.msg  MsgGpsCoordinate.msg  MsgGpsSatellites.msg  MsgGpsUtc.msg  MsgHeight.msg  MsgMagnDeclination.msg  MsgMotion.msg  MsgRaw.msg  MsgSatellites.msg  MsgStatus.msg  MsgUtc.msg
src/gps/src/: NMEA_decode.cpp  gps.cpp  main.cpp
src/libauv/: CMakeLists.txt  package.xml
src/libauv/camera_model/: camera_model.h
src/libauv/config/: front_camera.yml
src/libauv/config_reader/: config_reader.cpp  config_reader.h  yaml_reader.cpp  yaml_reader.h
src/libauv/factory/: static_registrator.h
src/libauv/include/: CMakeLists.txt  COM.h  CRC32.h  GBO_IPC_Interface.h  axes.h  battery.h  callsigns.h  cas_alarms.h  colors.h  com_compass.h  com_gbo.h  d_type.h  ipc_lib.h  log.h  mis_commands.h  sources.h  sucan_headers.h  supervisor.h  tu_commands.h  up_down.h
src/libauv/motion/: coord_system.h  mark_motion_client.cpp  mark_motion_client.h  motion_client.cpp  motion_client.h  robosub_conf_motion_client.cpp  robosub_conf_motion_client.h  robosub_motion_client.cpp  robosub_motion_client.h  wait_mode.h
src/libauv/point/: point.cpp  point.h
src/libauv/utils/: basic.cpp  basic.h  earth.cpp  earth.h  math_u.cpp  math_u.h  node_utils.h  utils.h
src/libipc/: CMakeLists.txt  ipc.cpp  ipc.h  main.cpp  package.xml  pub.cpp  sub_async.cpp  sub_sync.cpp
src/libipc/msg/: MsgTestMsg.msg
src/motion/: CMakeLists.txt  motion_server.cpp  motion_server.h  package.xml
src/motion/config/: motion.yml
src/motion/include/: motion_server.h  navig_info.h  registry.h  regul_config.h  regul_producer.h  regul_storage.h  thrust_info.h
src/motion/launch/: motion.launch
src/motion/motion_client/: axis.h  cmd_status.h  mark_motion_client.cpp  mark_motion_client.h  motion_client.cpp  motion_client.h  move_mode.h  robosub_conf_motion_client.cpp  robosub_conf_motion_client.h  robosub_motion_client.cpp  robosub_motion_client.h  speedy_vert_mode.h  wait_mode.h
src/motion/msg/: CmdFixDepthConf.msg  CmdFixHeadingConf.msg  CmdFixHeight.msg  CmdFixPitch.msg  CmdFixPosition.msg  CmdFixPositionConf.msg  CmdFixTack.msg  CmdFixTarget.msg  CmdFixTargetDistance.msg  CmdFixThrust.msg  CmdFixVelocity.msg  CmdFixVert.msg  CmdReconfigure.msg  MsgCmdStatus.msg  MsgRegul.msg  MsgTackRegulator.msg
src/motion/src/: _sketch_main.cpp  _sketch_motion.h  main.cpp  motion_server.cpp  registry.cpp  regul_storage.cpp
src/navig/: CMakeLists.txt  main.cpp  navig.cpp  navig.h  package.xml
src/navig/cfg/: LocalPositionEstimator.cfg  Navig.cfg  PositionEstimator.cfg
src/navig/config/: navig.yml
src/navig/include/: device_not_respond_exception.h  dynamic_parameters.h  exceptions.h  local_position_estimator.h  navig.h  navig_base.h  (+6 more)
src/real_time_plot/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml
src/record/: CMakeLists.txt  package.xml
src/sidesonar/: CMakeLists.txt  package.xml
src/supervisor/: CMakeLists.txt  package.xml  supervisor.launch
src/tcu/: CMakeLists.txt  main.cpp  matrix_inversion.h  package.xml  tcu.cpp  tcu.h  tcu.yml  tcu_robosub.cpp  tcu_robosub.h  tcu_surface.cpp  tcu_surface.h
src/video/: CMakeLists.txt  circle.cpp  common.h  fargate.cpp  gate.cpp  gate.h  hsv_visualizer.cpp  image_algorithm.cpp  image_algorithm.h  image_pipeline.h  main.cpp  objects.h  package.xml  rec_factory.h  recognizer.h  stripe.cpp  stripe.h  visualizer.py
src/vision/: CMakeLists.txt  bin.cpp  bin_legacy.cpp  channel.cpp  channel.h  circle.cpp  fargate.cpp  fargate.h  gate.h  hsv_visualizer.cpp  image_algorithm.cpp  image_algorithm.h  image_pipeline.h  main.cpp  objects.h  package.xml  recognizer.h  stripe.cpp  stripe.h  visualizer.py
(+329 files in other folders)
